# population-dashboard

./: .gitignore  Dockerfile  README.md  data.py  main.py  pyproject.toml  requirements.txt
layouts/: index.html
widgets/: age_groups.py  histogram.py  population_growth.py
