[project]
name = "population-dashboard"
version = "0.1.2"
description = "A simple showcase for the NewsFlash framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "newsflash>=0.1.14",
    "polars>=1.34.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
